@@ -18,6 +18,7 @@ import rasterio.tool
 import rasterio.warp
 
 from rasterio.rio.cli import cli
+from rasterio.rio.info import info
 from rasterio.rio.merge import merge
 
 
@@ -87,32 +88,6 @@ def write_features(file, collection,
 # Command bodies less than ~20 lines, e.g. info() below, can go in this
 # module. Longer ones, e.g. insp() shall call functions imported from
 # rasterio.tool.
-
-# Info command.
-@cli.command(short_help="Print information about a data file.")
-@click.argument('src_path', type=click.Path(exists=True))
-@click.option('--meta', 'aspect', flag_value='meta', default=True,
-    help="Show data file structure (default).")
-@click.option('--tags', 'aspect', flag_value='tags',
-    help="Show data file tags.")
-@click.option('--indent', default=2, type=int,
-              help="Indentation level for pretty printed output")
-@click.option('--namespace', help="Select a tag namespace.")
-@click.pass_context
-def info(ctx, src_path, aspect, indent, namespace):
-    verbosity = ctx.obj['verbosity']
-    logger = logging.getLogger('rio')
-    try:
-        with rasterio.drivers(CPL_DEBUG=verbosity>2):
-            with rasterio.open(src_path) as src:
-                if aspect == 'meta':
-                    pprint.pprint(src.meta, indent=indent)
-                elif aspect == 'tags':
-                    pprint.pprint(src.tags(ns=namespace), indent=indent)
-        sys.exit(0)
-    except Exception:
-        logger.exception("Failed. Exception caught")
-        sys.exit(1)
 
 # Insp command.
 @cli.command(short_help="Open a data file and start an interpreter.")
